[gd_scene load_steps=9 format=3 uid="uid://1as7qe1f084t"]

[ext_resource type="Theme" uid="uid://cegg3xuaofnvx" path="res://scenes/data/theme.tres" id="1_l21vi"]
[ext_resource type="Script" path="res://scenes/strategy_room/attack_card.gd" id="1_qbsf4"]
[ext_resource type="Texture2D" uid="uid://cea3hhnnfwaca" path="res://scenes/battle/data/attack_icon.png" id="3_n8nwf"]
[ext_resource type="PackedScene" uid="uid://2x6t18pxwa83" path="res://scenes/common/attack_shape_widget.tscn" id="4_lj4wg"]
[ext_resource type="FontFile" uid="uid://7uaw5jndvhyl" path="res://scenes/data/fonts/Aleo-Regular.ttf" id="5_j8bb0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ilroe"]
color = Color(0.372549, 0.266667, 0.129412, 1)
grow_begin = -3.0
grow_end = -3.0
vertical = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8d5w5"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
draw_center = false
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.368627)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j12yh"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="AttackCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1584.0
offset_bottom = -832.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l21vi")
script = ExtResource("1_qbsf4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="AttackIcon" type="TextureRect" parent="VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_n8nwf")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Header"]
layout_mode = 2

[node name="AttackNameLabel" type="Label" parent="VBoxContainer/Header/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Attack"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/VBoxContainer"]
layout_mode = 2

[node name="SelfLabel" type="Label" parent="VBoxContainer/Header/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Self"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Header/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_ilroe")

[node name="AllyLabel" type="Label" parent="VBoxContainer/Header/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ally"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Header/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_ilroe")

[node name="EnemyLabel" type="Label" parent="VBoxContainer/Header/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemy"

[node name="Body" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8d5w5")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Body"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureButton" type="PanelContainer" parent="VBoxContainer/Body/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_j12yh")

[node name="AttackShapeWidget" parent="VBoxContainer/Body/VBoxContainer/TextureButton" instance=ExtResource("4_lj4wg")]
unique_name_in_owner = true
layout_mode = 2
separation = 2
active_shape_color = Color(0.596078, 0.160784, 0.168627, 1)
inactive_shape_color = Color(0.372549, 0.545098, 0.741176, 1)

[node name="MulticastLabel" type="Label" parent="VBoxContainer/Body/VBoxContainer/TextureButton/AttackShapeWidget"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "1x"

[node name="AttackDescriptionLabel" type="RichTextLabel" parent="VBoxContainer/Body/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_j8bb0")
bbcode_enabled = true
text = "Deals [color=#111111]2[/color] damage plus [color=#111111]1[/color]x DMG from range."
